[tool.poetry]
version="0.5.0"
name = "pypendency"
authors= ["Miguel G. Flores<miguel.gonzalez@feverup.com>"]
description = "Dependency injection tool"
readme = "README.md"
license = "MIT License"
classifiers=[
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
[tool.poetry.dependencies]
python = "^3.8.0"
PyYAML= "^6.0"

[tool.poetry.dev-dependencies]
black = "~23.3.0"
mypy = "~1.3.0"
flake8 = "~5.0.4"
types-PyYAML = "~6.0.12.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ['py38', 'py39']
include = '\.pyi?$'
exclude = '''
    /(
      | \.git
      | \.mypy_cache
      | \.tox
      | \.venv
    )/
    '''